chilverchian culture change
- added trigger allowing to only change focused culture instead of all accepted
- fixed code formating
- tooltip updated to present current changes
- removed "now"

--- a/localisation/TD_01_flavour_chilverchian_march_l_english.yml
+++ b/localisation/TD_01_flavour_chilverchian_march_l_english.yml
@@ -49,9 +49,9 @@ chilverchian_march_resettlement_fear:0 "Resettlement Fear"
 chilverchian_march_cultivate_culture:0 "Cultivate Local Culture"
 
 ## Forming
-vinalion_culture_chance_explanation_tt:0 "There is a 25% chance to convert each province with accepted culture to vinalien culture"
-confinia_culture_chance_explanation_tt:0 "There is a 25% chance to convert each province with accepted culture to confinian culture"
-philippia_culture_chance_explanation_tt:0 "There is a 25% chance to convert each province with accepted culture to philippian culture"
+vinalion_culture_chance_explanation_tt:0 "There is a 50% chance to convert each Camarian province with accepted culture to vinalien culture"
+confinia_culture_chance_explanation_tt:0 "There is a 50% chance to convert each Anavatic province with accepted culture to confinian culture"
+philippia_culture_chance_explanation_tt:0 "There is a 50% chance to convert each Marstonian province with accepted culture to Philippian culture"
 
 ## Events
 td_chilverchian_marches.1.t:0 "Local Peasants against Oppression"
@@ -70,7 +70,7 @@ td_chilverchian_marches.3.a:0 "Crush them!"
 td_chilverchian_marches.3.b:0 "Crush nobility instead!"
 
 td_chilverchian_marches.4.t:0 "Assimilation Debates"
-td_chilverchian_marches.4.desc:0 "Situation of this country sparked debates in cities. Our population is now divided between two camps supporting different stances and now they demand official response from us. Showing support for one side can further our efforts. What should we do?"
+td_chilverchian_marches.4.desc:0 "Situation of this country sparked debates in cities. Our population is now divided between two camps supporting different stances and they demand official response from us. Showing support for one side can further our efforts. What should we do?"
 td_chilverchian_marches.4.a:0 "Support pro-assimilation camp"
 td_chilverchian_marches.4.b:0 "Support pro-repression camp"
 
