--- a/localisation/TD_01_flavour_chilverchian_march_l_english.yml
+++ b/localisation/TD_01_flavour_chilverchian_march_l_english.yml
@@ -49,9 +49,9 @@ chilverchian_march_resettlement_fear:0 "Resettlement Fear"
 chilverchian_march_cultivate_culture:0 "Cultivate Local Culture"
 
 ## Forming
-vinalion_culture_chance_explanation_tt:0 "There is a 50% chance to convert each Camarian province with accepted culture to vinalien culture"
-confinia_culture_chance_explanation_tt:0 "There is a 50% chance to convert each Anavatic province with accepted culture to confinian culture"
-philippia_culture_chance_explanation_tt:0 "There is a 50% chance to convert each Marstonian province with accepted culture to Philippian culture"
+vinalion_culture_chance_explanation_tt:0 "There is a 33% chance to convert each Camarian province with accepted culture to Vinalien culture"
+confinia_culture_chance_explanation_tt:0 "There is a 33% chance to convert each Anavatic province with accepted culture to Confinian culture"
+philippia_culture_chance_explanation_tt:0 "There is a 33% chance to convert each Marstonian province with accepted culture to Philippian culture"
 
 ## Events
 td_chilverchian_marches.1.t:0 "Local Peasants against Oppression"
