--- a/localisation/TD_government_l_english.yml
+++ b/localisation/TD_government_l_english.yml
@@ -42,7 +42,7 @@
  chilverchian_march:0 "Chilverchian March"
  chilverchian_march_desc:0 "Chilverchian Marches are composed of king errants seeking glory by conquest of foreign lands."
  chilverchian_knighthood:0 "Chilverchian Knighthood"
- chilverchian_knighthood_desc:0 "Conquest of foreign lands allowed us to create new national identity focused on knight traditions and war. We will banish local barbarism and create bring order to these lands"
+ chilverchian_knighthood_desc:0 "Conquest of foreign lands allowed us to create new national identity focused on knight traditions and war. We will banish local barbarism and bring order to these lands"
  modern_chivalry_reform:0 "Modern Chivalry"
  modern_chivalry_reform_desc:0 "Our nobility gained battle experience during conquest of these lands from foreigners. Some of them dropped their life as landed lords and became a part of our army as cavalry that arouses fear on battlefields."
 
