--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -202,3 +202,7 @@
  saelian.9.a:0 "We shall remain faithful to [Emperor.Monarch.GetName]."
  saelian.9.b:0 "We shall forge our own path."
  prince_rejected_kingship:0 "Repressed Ambitions"
+
+ edict_pro_unitate_title:0 "Edict Pro Unitate"
+ edict_pro_unitate_desc:0 "Also known as 'Pro unitate nostrae communitatis Saelianae et prosperitatem aeternam omnibus hominibus terrenis' was a major component of keeping religious unity in the empire throughout the XVI and XVII centuries."
+ sigilian_center_of_reformation:0 "Center of Counter-Reformation"
