--- a/localisation/TD_government_l_english.yml
+++ b/localisation/TD_government_l_english.yml
@@ -109,3 +109,9 @@
  VALDNIEKA:0 "Valdnieka"
  KARALIS:0 "Karalis"
  KARALISA:0 "Karalisa"
+
+ rusatunad_reform:0 "Rusatunad"
+ rusatunad_reform_desc:0 "Holy Kausali Kingdoms of the Hitej Mountains value their religion above all else and wish to spread it across the world."
+
+ sunbat_republic_reform:0 "Sunbat Republic"
+ sunbat_republic_reform_desc:0 "Ancient merchant states of Sunbahat were always carriers of goods across the Hestani Sea."
