--- a/localisation/EU4_l_english.yml
+++ b/localisation/EU4_l_english.yml
@@ -223,7 +223,7 @@
  obj_force_converted:0 "Converted another Nation"
  obj_force_converted_desc:0 "Forced another nation to change their religion to yours either through war, subject interaction or enforcing unity."
  obj_force_converted_tooltip:1 "Forced another nation to change their religion\n"
- obj_asian_trade:0 "Asian Trade"
+ obj_asian_trade:0 "Oriental Trade"
  obj_asian_trade_desc:0 "Gain the trade bonus from either Silk, Spices or Chinaware."
  obj_unify_culture:0 "Unify Culture"
  obj_unify_culture_desc:0 "Own all provinces of your culture group."
