camarian march areas name change
- changed names of chilverchian marches in camaria and changed all technical references for events to work

--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -177,9 +177,9 @@
  kotopou_area:0 "Cotopoux"
  frontiere_ouest_area:0 "Frontiere Ouest"
  terolia_area:0 "Terolia"
- pelian_area:0 "Pelian"
- abochia_area:0 "Abochia"
- dagica_area:0 "Dagica"
+ pealia_area:0 "Pealia"
+ aboneo_area:0 "Aboneo"
+ dagolli_area:0 "Dagolli"
 
  serenima_area:0 "Serenima"
  saganaria_area:0 "Saganaria"
