pre-march camaria nations
- added camarian nations and their cores on march lands

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -395,6 +395,12 @@
  ACC_ADJ:0 "Accariertan"
  TIA:0 "Tiarene"
  TIA_ADJ:0 "Tiarene"
+ ABN:0 "Aboneo"
+ ABN_ADJ:0 "Aboneoan"
+ DAO:0 "Dagolli"
+ DAO_ADJ:0 "Dagollian"
+ PEA:0 "Pealia"
+ PEA_ADJ:0 "Pealian"
 
 
  ANT:0 "Antawil"
