--- a/localisation/TD_government_l_english.yml
+++ b/localisation/TD_government_l_english.yml
@@ -115,3 +115,6 @@
 
  sunbat_republic_reform:0 "Sunbat Republic"
  sunbat_republic_reform_desc:0 "Ancient merchant states of Sunbahat were always carriers of goods across the Hestani Sea."
+
+ capirian_federation_reform:0 "Capirian Federation"
+ capirian_federation_reform_desc:0 "We united this region by diplomacy and reconquest. Now entire Western Camaria will be under our protection from foreign or local invaders"
