--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -1,4 +1,10 @@
 ﻿l_english:
+
+ TD_piety_supremacy_of_synod:0 "Supremacy of the Synod"
+ TD_piety_supremacy_of_synod_tooltip:0 "Promote Synods"
+ TD_piety_foreign_archbishop:0 "Foreign Archbishop"
+ TD_piety_foreign_archbishop_tooltip:0 "Invite Foreign Archbishop"
+
  emperor_call_for_reform_title:0 "Call for Reform"
  emperor_call_for_reform:0 "Call for Reform"
  emperor_call_for_reform_emperor:0 "Call for Reform"
