--- a/localisation/TD_colonial_regions_l_english.yml
+++ b/localisation/TD_colonial_regions_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
  COLONIAL_REGION_New_Root_GetName:0 "New [Root.GetName]"
 
- colonial_tonatiqan:0 "Colonial Tonatiqan""
+ colonial_tonatiqan:0 "Colonial Tonatiqan"
  COLONIAL_camanej:0 "Camanej"
  COLONIAL_camanej_ADJ:0 "Camaneji"
  COLONIAL_Kamanechland:0 "Kamanechland"
@@ -60,3 +60,9 @@
  COLONIAL_moorflussland_ADJ:0 "Moorflusslander"
  COLONIAL_Root_Culture_GetName_moorfluss:0 "[Root.GetAdjective] Moorfluss"
  COLONIAL_Root_Culture_GetName_moorfluss_ADJ:0 "[Root.GetAdjective] Moorflusser"
+
+ colonial_qarabil:0 "Colonial Qarabil"
+ COLONIAL_arijanes:0 "Arijanes"
+ COLONIAL_arijanes_ADJ:0 "Arijanesi"
+ COLONIAL_Root_Culture_GetName_qarabil:0 "[Root.GetAdjective] Qarabil"
+ COLONIAL_Root_Culture_GetName_qarabil_ADJ:0 "[Root.GetAdjective] Qarabili"
