--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -174,6 +174,7 @@
  xamaneh:0 "Xamaneh"
  masanul:0 "Masanul"
  nalanak:0 "Nalanak"
+ tikulawati:0 "Tikulawati"
 
  teotloqitl_group:0 "Teotloqitl"
  xoktiatoyatl:0 "Xoktiatoyatl"
@@ -213,3 +214,23 @@
  samadian_group:0 "Samadian"
  paredeshian:0 "Paredeshian"
  toga:0 "Toga"
+
+ topomundi_group:0 "Topomundi"
+ kunskala:0 "Kunskala"
+ maquchan:0 "Maquchan"
+ capurjan:0 "Capurjan"
+ kullasuy:0 "Kullasuy"
+
+ panpallpan_group:0 "Panpallpan"
+ michina:0 "Michina"
+ nalnaqi:0 "Nalnaqi"
+ 
+ itulan_group:0 "Itulan"
+ ilonean:0 "Ilo'nean"
+ palanaqi:0 "Palanaqi"
+ alkapu:0 "Alkapu"
+
+ qarabili_group:0 "Qarabili"
+ arijan:0 "Arijan"
+ ke:0 "Ke"
+ pirugan:0 "Pirugan"
