final map changes

--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -24,7 +24,7 @@
  taqari_current_area:0 "Taqari Current"
  northern_tarhian_coast_area:0 "Northern Tarhian Coast"
  dalvian_waters_area:0 "Dalvian Waters"
- sea_of_oiva:0 "Sea of Oiva"
+ sea_of_oiva_area:0 "Sea of Oiva"
  middle_maqitian_sea_area:0 "Central Maqitan Sea"
  west_maqitian_sea_area:0 "Western Maqitan Sea"
 
