--- a/localisation/TD_colonial_regions_l_english.yml
+++ b/localisation/TD_colonial_regions_l_english.yml
@@ -18,6 +18,8 @@
  COLONIAL_ardwajdi_ADJ:0 "Ardwajdi"
  COLONIAL_new_verracia:0 "New Verracia"
  COLONIAL_new_verracia_ADJ:0 "New Verracian"
+ COLONIAL_ziemia_edwardzka:0 "Ziemja Edwardzka"
+ COLONIAL_ziemia_edwardzka_ADJ:0 "Edwardzkan"
  COLONIAL_Root_Culture_GetName_ardwajdi:0 "[Root.GetAdjective] Ardwajda"
  COLONIAL_Root_Culture_GetName_ardwajdi_ADJ:0 "[Root.GetAdjective] Ardwajdan"
 
