--- a/localisation/TD_superregions_l_english.yml
+++ b/localisation/TD_superregions_l_english.yml
@@ -11,3 +11,4 @@
  greater_tarhia_superregion:0 "Greater Tarhia"
  central_steppe_superregion:0 "Central Steppe"
  samadia_superregion:0 "Samadia"
+ northern_venatia_superregion:0 "Northern Venatia"
