--- a/localisation/TD_regions_l_english.yml
+++ b/localisation/TD_regions_l_english.yml
@@ -54,3 +54,8 @@
  achiqnatar_region:0 "Achiqnatar"
  qarabil_maior_region:0 "Qarabil Maior"
  central_niheyan_ocean:0 "Central Niheyan Ocean"
+ agellard_region:0 "Agellard"
+ fiddatan_region:0 "Fiddatan"
+ radoriasa_region:0 "Radoriasa"
+ pisachaian_ocean_region:0 "Pisachaian Ocean"
+ southern_niheyan_ocean:0 "Southen Niheyan Ocean"
