--- a/localisation/TD_01_flavour_nifthem_l_english.yml
+++ b/localisation/TD_01_flavour_nifthem_l_english.yml
@@ -11,3 +11,57 @@
  randwerpen.3.desc:0 "Despite the government's fears of ehreni invasion, many years have passed with our army on high alert - but nobody came. People are slowly starting to lose faith in the militaristic government and go back to their normal boring lives.\nBut in recent days, one of the ministers proposed a new way to stir up the Randwerpian fervor - what if we were the ones attacking Ehrenstaat to free our enslaved brethrens?"
  randwerpen.3.a:0 "Fine. I'll do it myself."
  randwerpen.3.b:0 "Better to not wake up the sleeping beer."
+
+#### ideas
+
+## group
+ group_nifthemi_ideas:0 "Nifthemi Group Ideas"
+ group_nifthemi_ideas_bonus:0 "Nifthemi Group Ideas"
+
+ nifthemi_war_is_business:0 "War is Business"
+ nifthemi_war_is_business_desc:0 "Our wealth will allow us to encourage mercenaries to join our forces. It should allow us to boost our numbers to gain necessary advantage."
+
+ nifthemi_beyond_taedium:0 "Beyond Taedium"
+ nifthemi_beyond_taedium_desc:0 "Nifthemi fleets will explore beyond Taedium so we can find new civilizations to trade with."
+ 
+ nifthemi_colonial_spirit:0 "Colonial Spirit"
+ nifthemi_colonial_spirit_desc:0 "We found new lands that are empty and free to claim! Our population now wants to continue our exploration and start colonisation of these lands."
+
+ nifthemi_rapid_urbanisation:0 "Rapid Urbanisation"
+ nifthemi_rapid_urbanisation_desc:0 "These lands are very fertile and full of resources that can allow us to expand our cities."
+
+ nifthemi_bank_of_nifthem:0 "Bank of Nifthem"
+ nifthemi_bank_of_nifthem_desc:0 "Who controls banking controls economy, and our banks and bankiers are one of the most famous and trusted on the continent, maybe even entire world."
+
+ nifthemi_sea_trade:0 "Sea Trade"
+ nifthemi_sea_trade_desc:0 "Expansion of global trade and flow of goods from colonies increased the role of sea trade even more than previously. We need to invest into this field even more!"
+
+ nifthemi_global_economy:0 "Global Economy"
+ nifthemi_global_economy_desc:0 "Our territory is one of the most important trade centers on the world. It means that any change that happens here also affects other countries economies."
+ 
+## united nifthem
+
+ united_nifthemi_ideas:0 "Nifthemi Ideas"
+ united_nifthemi_ideas_bonus:0 "Nifthemi Ideas"
+
+ united_nifthemi_national_unity:0 "National Unity"
+ united_nifthemi_national_unity_desc:0 "Our population gone through a lot making it more united than ever."
+
+ united_nifthemi_against_ehren_imperialism:0 "Against Ehren Imperialism"
+ united_nifthemi_against_ehren_imperialism_desc:0 "Ehren imperialists tried to conquer and exploit our territory for their own gain! We, people of Nifthem are now united and ready to prevent this thing from happening."
+
+ united_nifthemi_colonial_empire:0 "Colonial Empire"
+ united_nifthemi_colonial_empire_desc:0 "One of the most important aspects of modern Nifthemi culture is the desire to explore new lands. Because of that we can mobilise a lot of men to expand our empire beyond the seas"
+
+ united_nifthemi_citizen_guard:0 "Citizen Guard"
+ united_nifthemi_citizen_guard_desc:0 "We don't need a professional army, citizens will defend our lands by their own!"
+
+ united_nifthemi_global_trade:0 "Global Trade"
+ united_nifthemi_global_trade_desc:0 "Everything valuable will go through Nifthemi borders, with a fee of course."
+
+ united_nifthemi_modern_state:0 "Modern State"
+ united_nifthemi_modern_state_desc:0 "Government must be constantly reformed and maintained for it to be useful to all citizens."
+
+ united_nifthemi_northern_armada:0 "Northern Armada"
+ united_nifthemi_northern_armada_desc:0 "One thing where Ehrenians were right is need of a big fleet to maintain influence in Northern Taedium. So we will invest into our new armada that will control the seas."
+ 
