final map changes final end

--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -234,3 +234,8 @@
  arijan:0 "Arijan"
  ke:0 "Ke"
  pirugan:0 "Pirugan"
+
+ tachira_group:0 "Tachira"
+ baawoi:0 "Baawo'ia"
+ taawa:0 "Taawa"
+ techoba:0 "Techoba"
