--- a/localisation/TD_01_flavour_nifthem_l_english.yml
+++ b/localisation/TD_01_flavour_nifthem_l_english.yml
@@ -1,4 +1,9 @@
 ﻿l_english:
+
+ #### events
+
+ ## randwerpen start
+ 
  randwerpen.1.t:0 "Randwerpen and Ehrenstaat"
  randwerpen.1.desc:0 "Ehren ambition to become sole economic hegemon on the north required for them to have huge industrial base that was lacking on Ehren islands. Thats when first ideas to integrate Nifthem and Tummland emerged, with first being more favourable to the leadership. From this time Ehrenstaat started to tighten their grip in their sphere of influence with mass vassalization and forceful integration of cities into Ehren administration in first half of XV ceuntry.\nThis rapid Ehren expansion didn't go unnoticed as Saelian Empire started to support idea of integration of Bloemrijkland into the Empire and Randwerpen deciding to unify entire region to stop Ehren agression. Alerted leadership of Randwerpen started mass militarisation and consolidation of the realm to protect against the future invasion."
  randwerpen.1.a:0 "Inferno is coming."
@@ -15,29 +20,30 @@
 #### ideas
 
 ## group
- group_nifthemi_ideas:0 "Nifthemi Group Ideas"
- group_nifthemi_ideas_bonus:0 "Nifthemi Group Ideas"
 
- nifthemi_war_is_business:0 "War is Business"
- nifthemi_war_is_business_desc:0 "Our wealth will allow us to encourage mercenaries to join our forces. It should allow us to boost our numbers to gain necessary advantage."
+ minor_nifthemi_ideas:0 "Minor Nifthemi Ideas"
+ minor_nifthemi_ideas_bonus:0 "Minor Nifthemi Ideas"
 
- nifthemi_beyond_taedium:0 "Beyond Taedium"
- nifthemi_beyond_taedium_desc:0 "Nifthemi fleets will explore beyond Taedium so we can find new civilizations to trade with."
+ minor_nifthemi_war_is_business:0 "War is Business"
+ minor_nifthemi_war_is_business_desc:0 "Our wealth will allow us to encourage mercenaries to join our forces. It should allow us to boost our numbers to gain necessary advantage."
+
+ minor_nifthemi_beyond_taedium:0 "Beyond Taedium"
+ minor_nifthemi_beyond_taedium_desc:0 "Nifthemi fleets will explore beyond Taedium so we can find new civilizations to trade with."
  
- nifthemi_colonial_spirit:0 "Colonial Spirit"
- nifthemi_colonial_spirit_desc:0 "We found new lands that are empty and free to claim! Our population now wants to continue our exploration and start colonisation of these lands."
+ minor_nifthemi_colonial_spirit:0 "Colonial Spirit"
+ minor_nifthemi_colonial_spirit_desc:0 "We found new lands that are empty and free to claim! Our population now wants to continue our exploration and start colonisation of these lands."
 
- nifthemi_rapid_urbanisation:0 "Rapid Urbanisation"
- nifthemi_rapid_urbanisation_desc:0 "These lands are very fertile and full of resources that can allow us to expand our cities."
+ minor_nifthemi_rapid_urbanisation:0 "Rapid Urbanisation"
+ minor_nifthemi_rapid_urbanisation_desc:0 "These lands are very fertile and full of resources that can allow us to expand our cities."
 
- nifthemi_bank_of_nifthem:0 "Bank of Nifthem"
- nifthemi_bank_of_nifthem_desc:0 "Who controls banking controls economy, and our banks and bankiers are one of the most famous and trusted on the continent, maybe even entire world."
+ minor_nifthemi_bank_of_nifthem:0 "Bank of Nifthem"
+ minor_nifthemi_bank_of_nifthem_desc:0 "Who controls banking controls economy, and our banks and bankiers are one of the most famous and trusted on the continent, maybe even entire world."
 
- nifthemi_sea_trade:0 "Sea Trade"
- nifthemi_sea_trade_desc:0 "Expansion of global trade and flow of goods from colonies increased the role of sea trade even more than previously. We need to invest into this field even more!"
+ minor_nifthemi_sea_trade:0 "Sea Trade"
+ minor_nifthemi_sea_trade_desc:0 "Expansion of global trade and flow of goods from colonies increased the role of sea trade even more than previously. We need to invest into this field even more!"
 
- nifthemi_global_economy:0 "Global Economy"
- nifthemi_global_economy_desc:0 "Our territory is one of the most important trade centers on the world. It means that any change that happens here also affects other countries economies."
+ minor_nifthemi_global_economy:0 "Global Economy"
+ minor_nifthemi_global_economy_desc:0 "Our territory is one of the most important trade centers on the world. It means that any change that happens here also affects other countries economies."
  
 ## united nifthem
 
@@ -51,7 +57,7 @@
  united_nifthemi_against_ehren_imperialism_desc:0 "Ehren imperialists tried to conquer and exploit our territory for their own gain! We, people of Nifthem are now united and ready to prevent this thing from happening."
 
  united_nifthemi_colonial_empire:0 "Colonial Empire"
- united_nifthemi_colonial_empire_desc:0 "One of the most important aspects of modern Nifthemi culture is the desire to explore new lands. Because of that we can mobilise a lot of men to expand our empire beyond the seas"
+ united_nifthemi_colonial_empire_desc:0 "One of the most important aspects of modern Nifthemi culture is the desire to explore new lands. Because of that we can mobilise a lot of men to expand our empire beyond the seas."
 
  united_nifthemi_citizen_guard:0 "Citizen Guard"
  united_nifthemi_citizen_guard_desc:0 "We don't need a professional army, citizens will defend our lands by their own!"
