--- a/localisation/TD_01_flavour_nifthem_l_english.yml
+++ b/localisation/TD_01_flavour_nifthem_l_english.yml
@@ -21,8 +21,9 @@
 
 ## group
 
- minor_nifthemi_ideas:0 "Minor Nifthemi Ideas"
- minor_nifthemi_ideas_bonus:0 "Minor Nifthemi Ideas"
+ minor_nifthemi_ideas:0 "Nifthemi Minor Ideas"
+ minor_nifthemi_ideas:0 "Nifthemi Minor Traditions"
+ minor_nifthemi_ideas_bonus:0 "Nifthemi Minor Ideas"
 
  minor_nifthemi_war_is_business:0 "War is Business"
  minor_nifthemi_war_is_business_desc:0 "Our wealth will allow us to encourage mercenaries to join our forces. It should allow us to boost our numbers to gain necessary advantage."
