--- a/localisation/TD_02_decision_nations_l_english.yml
+++ b/localisation/TD_02_decision_nations_l_english.yml
@@ -94,3 +94,6 @@
 
  karunestan_nation_title:0 "Unite Karunestan @KAU"
  karunestan_nation_desc:0 ""
+
+ achiqnatar_nation_title:0 "Unite Achiqnatar @ACI"
+ achiqnatar_nation_desc:0 "Too long have we lived in disunity! To survive the future, we must walk together as one nation under the sun."
