--- a/localisation/loadingtips_l_english.yml
+++ b/localisation/loadingtips_l_english.yml
@@ -12,5 +12,13 @@
  LOADING_TIP_10:0 "Tonatitlani people established their empire following the VIII century collapsed caused by mass epidemics and famine."
  LOADING_TIP_11:0 "Rouvia was once a powerful tribal entity but was slowly colonized and conquered by Capiran and Aqerbic states."
  LOADING_TIP_12:0 "Aevadata of Varazanah conquered the Pamkusean peninsula in the XIV century, forcing the local population into exile." 
- LOADING_TIP_13:0 "Apaxtaros is a Pamkuseo-Visparayan hybrid established in XV century"
+ LOADING_TIP_13:0 "Apaxtaros is the name of a Rah Jadid state which embraced the Pamkusean culture in the begining of the XVI century."
  LOADING_TIP_14:0 "Ehwitrawi and Mewitan peoples are renowned for their mutual hatred."
+ LOADING_TIP_15:0 "City of Togawy is famous for producing high quality Amber jewelry."
+ LOADING_TIP_16:0 "Panpallpa means 'Flatlands' in Maquchan language."
+ LOADING_TIP_17:0 "Grafoulan monk Liemar was not the first to attempt reforming the Saelian church, but he surely was the most successful."
+ LOADING_TIP_18:0 "Saelius died from trichinosis."
+ LOADING_TIP_19:0 "Absolutist monarchy of Bogiland of the XVII century became a role-model for other powerful states in Taedium."
+ LOADING_TIP_20:0 "Many people in Tummland believe that Ehrenis are the literal servants of evil spirit of Ilkeä."
+ LOADING_TIP_21:0 "King Pepik 'The Mad' owned 2 boars, 3 camels and an elephant."
+ 
