--- a/localisation/TD_01_flavour_nifthem_l_english.yml
+++ b/localisation/TD_01_flavour_nifthem_l_english.yml
@@ -1,5 +1,12 @@
 ﻿l_english:
 
+ #### government
+
+ ## zandigehaven
+
+ merchant_principality_reform:0 "Merchant Principality"
+ merchant_principality_reform_desc:0 "Our government functions in some parts like merchant republic and in some parts like monarchy."
+
  #### events
 
  ## randwerpen start
