final map changes final end final finished end: the mappening

--- a/localisation/TD_colonial_regions_l_english.yml
+++ b/localisation/TD_colonial_regions_l_english.yml
@@ -60,6 +60,8 @@
  colonial_moorfluss:0 "Colonial Moorfluss"
  COLONIAL_moorflussland:0 "Moorflussland"
  COLONIAL_moorflussland_ADJ:0 "Moorflusslander"
+ COLONIAL_Talamhlachan:0 "Talamhlachan"
+ COLONIAL_Talamhlachan_ADJ:0 "Talamhlachanian"
  COLONIAL_Root_Culture_GetName_moorfluss:0 "[Root.GetAdjective] Moorfluss"
  COLONIAL_Root_Culture_GetName_moorfluss_ADJ:0 "[Root.GetAdjective] Moorflusser"
 
