--- a/localisation/TD_regions_l_english.yml
+++ b/localisation/TD_regions_l_english.yml
@@ -59,3 +59,5 @@
  radoriasa_region:0 "Radoriasa"
  pisachaian_ocean_region:0 "Pisachaian Ocean"
  southern_niheyan_ocean:0 "Southen Niheyan Ocean"
+ coicemhar_region:0 "Coicemhar"
+ upper_moorfluss_region:0 "Upper Moorfluss"
