--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -59,3 +59,4 @@
  panpallpa_tradenode:0 "Panpallpa"
  qarabil_tradenode:0 "Qarabil Maior"
  radoriasa_tradenode:0 "Radoriasa"
+ upper_moorfluss_tradenode:0 "Upper Moorfluss"
