--- a/localisation/TD_01_flavour_chilverchian_march_l_english.yml
+++ b/localisation/TD_01_flavour_chilverchian_march_l_english.yml
@@ -1,6 +1,9 @@
 ﻿l_english:
 ## Ideas
 chilverchian_march_ideas:0 "Chilverchian March Ideas"
+chilverchian_march_ideas_start:0 "Chilverchian March Traditions"
+chilverchian_march_ideas_bonus:0 "Chilverchian March Ideas"
+
 marchien_foreign_army:0 "Foreign Army"
 marchien_foreign_army_desc:0 "We resorted to using mercenaries when we had problems to mobilise our local population"
 marchien_noble_court:0 "Noble Court"
