--- a/localisation/TD_01_flavour_nifthem_l_english.yml
+++ b/localisation/TD_01_flavour_nifthem_l_english.yml
@@ -29,7 +29,7 @@
 ## group
 
  minor_nifthemi_ideas:0 "Nifthemi Minor Ideas"
- minor_nifthemi_ideas:0 "Nifthemi Minor Traditions"
+ minor_nifthemi_ideas_start:0 "Nifthemi Minor Traditions"
  minor_nifthemi_ideas_bonus:0 "Nifthemi Minor Ideas"
 
  minor_nifthemi_war_is_business:0 "War is Business"
