generic missions batch 4

--- a/localisation/TD_03_missions_generic_l_english.yml
+++ b/localisation/TD_03_missions_generic_l_english.yml
@@ -109,7 +109,7 @@
 
  generic_regional_hegemony_title:0 "Regional Hegemony"
  generic_regional_hegemony_desc:0 ""
- TD_regional_hegemony;0 "Regional Hegemony"
+ TD_regional_hegemony:0 "Regional Hegemony"
  generic_regional_hegemony_tt:0 "Every province with Courthouse or Townhall will get:"
  TD_extensive_administration:0 "Extensive Administration"
 
@@ -132,6 +132,7 @@
 
  generic_city_of_worlds_desire_title:0 "The City of World's Desire"
  generic_city_of_worlds_desire_desc:0 ""
+ generic_city_of_worlds_desire_tt:0 "Gain 10 mana per point of development in the capital city:"
 
  generic_global_splendor_title:0 "Global Splendor"
  generic_global_splendor_desc:0 ""
@@ -139,21 +140,27 @@
 
  generic_new_production_methods_title:0 "New Methods of Production"
  generic_new_production_methods_desc:0 ""
+ TD_increased_production:0 "Increased Production"
 
  generic_industrial_cities_title:0 "Industrial Cities"
  generic_industrial_cities_desc:0 ""
+ TD_industrial_city:0 "Industrial City"
 
  generic_march_of_industry_title:0 "March of Industry"
  generic_march_of_industry_desc:0 ""
+ TD_march_of_industry:0 "March of Industry"
 
  generic_control_local_trade_title:0 "Control Local Trade"
  generic_control_local_trade_desc:0 ""
+ TD_growing_marketplace:0 "Growing Marketplace"
 
  generic_enforce_mercantilism_title:0 "Goods must Flow"
  generic_enforce_mercantilism_desc:0 ""
+ TD_economic_autocracy:0 "Economic Autocracy"
 
  generic_global_market_title:0 "Global Market"
  generic_global_market_desc:0 ""
+ TD_global_market:0 "Global Market"
 
 
  TD_generic_start_military:0 "Growing Army"
