--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -15,6 +15,8 @@
  liemarian_religion_desc:0 "Liemarianism is the fruit of saelian reformation which was slowly building up since the XIV century. They reject the monarchical approach of Sigilianism and Eneratianism and argue, that the representative of God on earth should be elected by the saelian community. The elements of original Saelian syncretism are still present within liemarianism but more nuanced than in earlier days."
  popolazian:0 "Popolazian"
  bilohian:0 "Bilohian"
+ agellidian:0 "Agellidian"
+ agellidian_religion_desc:0 "Idea of this faith was sparked by 15th century Altaciman poet and philosopher Ali Ibn Sumayya Agellid Al-Altaqadim who proposed that the Emperor Saelius was one of the Yaltazim prophets and his word should be treated as such. This belief became especially popular amongst the urban population in Novoregno between XVI and XVII centuries and, with the growing influence of Liemarianism, became state religilon."
 
  yermic:0 "Yermic"
  YERMIC_CRUSADE:0 "Jihad"
