--- a/localisation/TD_01_flavour_marstonia_l_english.yml
+++ b/localisation/TD_01_flavour_marstonia_l_english.yml
@@ -48,3 +48,24 @@
  uzkolia_noukogu_desc:0 "Nõukogu refers to the council of merchants who compose the uzkolian government. Each representative is selected from different city, town or a village. This is to ensure each settlements can voice their opinion on matters regarding the entire nation."
  uzkolia_oriental_guns:0 "Oriental Guns"
  uzkolia_oriental_guns_desc:0 "Being a middleman between the two words, the innovation travels fast. After successes of kakigian empire thanks to using siege artillery, many of our engineers and shipwrights became interested in using this technology to grant Uzkolia extra advantage over our enemies. First cannons were imported from the east, but nowadays they are made locally or purchased from nearby states."
+
+ dievo:0 "Dievo"
+ dievo_desc:0 "God deity of power, loyalty, devotion and fight."
+ bezyswet:0 "Bezyswet"
+ bezyswet_desc:0 "God of traveling, trade, discussion and adventure."
+ belgolva:0 "Belgolva"
+ belgolba_desc:0 "Goddess of fertility, new settlements, water sources and rivers."
+ velypshen:0 "Velypshen"
+ velypshen_desc:0 "God of prosperity, farming, work and parenthood."
+ les:0 "Les"
+ les_desc:0 "God of luck, fortune, wild animals and weather."
+ jutranka:0 "Jutranka"
+ jutranka_desc:0 "Goddess of love, new year, good intentions and the next day."
+ les_random_modifier:0 "We will get a random modifier for following Les."
+ TD_les_morale:0 "Blessing of Les"
+ TD_les_own_dice:0 "Blessing of Les"
+ TD_les_goods:0 "Blessing of Les"
+ TD_les_separatism:0 "Blessing of Les"
+ TD_les_development:0 "Blessing of Les"
+ TD_les_unrest:0 "Blessing of Les"
+ TD_les_apc:0 "Blessing of Les"
