Colonial Events and minor fixes
10 brand new colonial events, and fixed one loc file having UTF-8 instead of UTF-8-BOM, although didn't test if on_actions work with the event, only manual command testing. My head is aching so much that i need some rest.

--- a/localisation/TD_01_flavour_achiqnay_l_english.yml
+++ b/localisation/TD_01_flavour_achiqnay_l_english.yml
@@ -1,4 +1,4 @@
-l_english:
+﻿l_english:
  high_kingdom_reform:0 "High Kingdom"
  high_kingdom_reform_desc:0 "People of Achiqnatar had to adapt to harsh mountainous environments. This terrain made it historically very hard to unite and administer the region."
  holy_city_reform:0 "Holy City"
