--- a/localisation/TD_01_flavour_aqerb_l_english.yml
+++ b/localisation/TD_01_flavour_aqerb_l_english.yml
@@ -59,7 +59,7 @@
  idea_brothers_in_faith:0 "Brothers in Faith"
  idea_brothers_in_faith_desc:0 "To maintain the stability of the realm it can't be build on dread. The fundamental pillar of society should be loyalty and trust. Strict societies will fall at any opportunity, but the feudal system of loyal hierarchy is eternal."
  idea_centralized_royal_domain:0 "Centralized Royal Domain"
- idea_centralized_royal_domain_desc:0 "Centralization was a result of growing popularity of liemarianism which promoted ruler autocracy to distant themselves from the emperor. With this came a new time to Narbone - the power became centralized in the king, rather than distributed amongst the nobility."
+ idea_centralized_royal_domain_desc:0 "Centralization was a result of growing popularity of liemarianism which promoted ruler autocracy to distant themselves from the emperor. With this came a new time to Narbona - the power became centralized in the king, rather than distributed amongst the nobility."
  idea_beyond_the_ocean:0 "Beyond the Ocean"
  idea_beyond_the_ocean_desc:0 "Stories of the new world spread from our enemies across the border. Riches beyond one's comprehension are in reach and for the taking to whoever gets to them first. Brave nobles and soldiers who fought against heathens in the homeland will now fight across the ocean to bring gold and treasures to the crown."
  idea_reforms_of_Manuel:0 "Manuelan Reforms"
