--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -21,7 +21,7 @@
  yermic:0 "Yermic"
  YERMIC_CRUSADE:0 "Jihad"
  yaltazim:0 "Yaltazim"
- yaltazim_religion_desc:0 "Yaltazimi are the followers of god Ilum who sents prophets on earth to teach people about pious and good life. Believers of this faith follow a plethora of prophets whose works and teachings are the fundaments of Yaltazim faith. First yaltazimi were originally victims of religious persecution in muzbah for following teachings of prophet Nathaniel in the VIII century BCE."
+ yaltazim_religion_desc:0 "Yaltazimi are the followers of god Ilum who sents prophets on earth to teach people about pious and good life. Believers of this faith follow a plethora of prophets whose works and teachings are the fundaments of Yaltazim faith. First yaltazimi believers were victims of religious persecution in muzbah for following the teachings of prophet Nathaniel in the VIII century BCE."
  ifritican_sect:0 "Ifritican Sect"
  musarfic_folklore:0 "Musarfic Folklore"
  musarfic_folklore_desc:0 "Musarfic Folklore represents variety of beliefs and cults in fawud desert. They believe that many gods lived Among Us in the past and died the same way a person does. It is common for families to proclaim one of the past gods as their ancestor and use this as a symbol of clan identity."
@@ -45,6 +45,7 @@
  hestani:0 "Hestani"
  nahitar:0 "Nahitar"
 
+ wasichantlian:0 "Chantlian"
  chantlian_paganism:0 "Chantlian Paganism"
  itonatilu:0 "Itonatilu"
  lummak_mythology:0 "Lummak Mythology"
