--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -83,7 +83,7 @@
  HAM_ADJ:0 "Hamidari"
  IGN:0 "Ignidunta"
  IGN_ADJ:0 "Ignidunter"
- NRB:0 "Narbone"
+ NRB:0 "Narbona"
  NRB_ADJ:0 "Narbonese"
  PAD:0 "Padosi"
  PAD_ADJ:0 "Padosian"
